bk_ida/gccida/g0/simplify_set
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_set/src/combine.c:5427:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v1; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_set/src/combine.c:5445:4: error: expected ';' after expression
rtx note; // [rsp+18h] [rbp-98h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_set/src/combine.c:5445:5: error: use of undeclared identifier 'note'; did you mean 'none'?
rtx note; // [rsp+18h] [rbp-98h] BYREF 
    ^~~~
    none
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_set/src/expr.h:119:17: note: 'none' declared here
enum direction {none, upward, downward};  /* Value has this type.  */
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_set/src/combine.c:5446:4: error: expected ';' after expression
rtx pat; // [rsp+20h] [rbp-90h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_set/src/combine.c:5446:5: error: use of undeclared identifier 'pat'
rtx pat; // [rsp+20h] [rbp-90h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_set/src/combine.c:5447:4: error: expected ';' after expression
rtx op1; // [rsp+28h] [rbp-88h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_set/src/combine.c:5447:5: error: use of undeclared identifier 'op1'
rtx op1; // [rsp+28h] [rbp-88h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_set/src/combine.c:5448:4: error: expected ';' after expression
rtx op0; // [rsp+30h] [rbp-80h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_set/src/combine.c:5448:5: error: use of undeclared identifier 'op0'
rtx op0; // [rsp+30h] [rbp-80h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_set/src/combine.c:5449:4: error: expected ';' after expression
rtx other_insn; // [rsp+38h] [rbp-78h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_set/src/combine.c:5449:5: error: use of undeclared identifier 'other_insn'
rtx other_insn; // [rsp+38h] [rbp-78h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_set/src/combine.c:5450:4: error: expected ';' after expression
rtx term3; // [rsp+40h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_set/src/combine.c:5450:5: error: use of undeclared identifier 'term3'
rtx term3; // [rsp+40h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_set/src/combine.c:5451:4: error: expected ';' after expression
rtx term2; // [rsp+48h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_set/src/combine.c:5451:5: error: use of undeclared identifier 'term2'
rtx term2; // [rsp+48h] [rbp-68h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_set/src/combine.c:5453:4: error: expected ';' after expression
rtx new_dest; // [rsp+58h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_set/src/combine.c:5453:5: error: use of undeclared identifier 'new_dest'
rtx new_dest; // [rsp+58h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_set/src/combine.c:5455:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code new_code; // [rsp+64h] [rbp-4Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_set/src/combine.c:5456:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode compare_mode; // [rsp+68h] [rbp-48h] 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_set/src/obj/combine.o] Error 1
